--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,21 @@
     <main>
         <header>
             <div class="header-logo">
-                LOGO
+                <h1>
+                    <a href="#"></a>
+                </h1>
             </div>
-            <div class="header-labels">LABELS</div>
-            <div>DETAILS</div>
+            <div class="header-labels">
+                <img src="/public/images/tel-tab.png" />
+                <img src="/public/images/header-image.png" />
+            </div>
+            <div class="header-details">
+                <a href="/contact">Contacto</a>
+                <div class="cart-box">
+                    <a class = "header-cart" href="/shopping-cart">Carrito:vacío</a>
+                </div>
+                <a href="/login">Inicio de Sesión</a>
+            </div>
         </header>
         <section class="error-notification">
             <p>ERROR</p>
