Upload images Nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <p>ERROR</p>
         </section>
         <section class="navigation-bar">
-            <p>NAVIGATION BAR</p>
+            <p>NAVIGATION BAR 1</p>
         </section>
         <section class="container">
             <div class="sidebar">
