--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Papelera Naty</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <main>
-        <header>
-            <div class="header-logo">
-                <h1>
-                    <a href="#"></a>
-                </h1>
-            </div>
-            <div class="header-labels">
-                <img src="/public/images/tel-tab.png" />
-                <img src="/public/images/header-image.png" />
-            </div>
-            <div class="header-details">
-                <a href="/contact">Contacto</a>
-                <div class="cart-box">
-                    <a class = "header-cart" href="/shopping-cart">Carrito:vacío</a>
-                </div>
-                <a href="/login">Inicio de Sesión</a>
-            </div>
-        </header>
-        <section class="error-notification">
-            <p>ERROR</p>
-        </section>
-        <section class="navigation-bar">
-            <p>NAVIGATION BAR 1</p>
-        </section>
-        <section class="container">
-            <div class="sidebar">
-                <div class="categories-sidebar">
-                    <p>CATEGORIES</p>
-                </div>
-                <div class="discounts-sidebar">
-                    <p>DISCOUNTS</p>
-                </div>
-                <div class="contact-sidebar">
-                    <p>CONTACT</p>
-                </div>
-                <div class="information-sidebar">
-                    <p>INFORMATION</p>
-                </div>
-            </div>
-            <div class="main-content">
-                <p>MAIN CONTENT</p>
-            </div>
-        </section>
-        <footer>
-            <p>FOOTER</p>
-        </footer>
-    </main>
-    
-</body>
+  <head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
