--- a/stylesClass/index.html
+++ b/stylesClass/index.html
@@ -14,10 +14,10 @@
     <p>adada adasd asdasd asda das</p>
   </header>
   <main>
-    <section class="presentation-section">
-      <div class="row">
+    <section className="presentation-section">
+      <div className="row">
         <h1>Papelera Naty</h1>
-        <div class="card">
+        <div className="card">
           <h3>Tenemos todo lo que necesitas</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus odio ac commodo dapibus. Vivamus a libero nulla. Donec at finibus urna. Vivamus convallis, erat eget fringilla tempus, orci velit maximus ex, in tempor lectus lacus eu dolor. Proin in commodo velit, ut efficitur lacus. Sed vestibulum volutpat neque, at ultrices dui rhoncus in. In non ultrices enim, in malesuada risus. Proin a dui a mauris tincidunt commodo quis eu arcu. Praesent accumsan dui in diam venenatis, non maximus diam finibus. </p>
         </div>
